--- a/config.ini
+++ b/config.ini
@@ -1,4 +1,4 @@
 [Settings]
 language = en
-post_command = ~/.config/ags/scripts/color_generation/switchwall.sh $wallpaper
+post_command = ~/.config/ags/scripts/color_generation/switchwall.sh --waypaper $wallpaper
 backend = none
